--- a/partials/editWeather/clouds.html
+++ b/partials/editWeather/clouds.html
@@ -33,23 +33,23 @@
         <div class="colors" ng-if="::layer.colors">
             <div>
                 <span class="color-label">Sunrise</span>
-                <color-selector color="layer.colors.sunrise" key="colors/weather"></color-selector>
-                <alpha-input color="layer.colors.sunrise"></alpha-input>
+                <color-selector color="layer.colors.Sunrise" key="colors/weather"></color-selector>
+                <alpha-input color="layer.colors.Sunrise"></alpha-input>
             </div>
             <div>
                 <span class="color-label">Day</span>
-                <color-selector color="layer.colors.day" key="colors/weather"></color-selector>
-                <alpha-input color="layer.colors.day"></alpha-input>
+                <color-selector color="layer.colors.Day" key="colors/weather"></color-selector>
+                <alpha-input color="layer.colors.Day"></alpha-input>
             </div>
             <div>
                 <span class="color-label">Sunset</span>
-                <color-selector color="layer.colors.sunset" key="colors/weather"></color-selector>
-                <alpha-input color="layer.colors.sunset"></alpha-input>
+                <color-selector color="layer.colors.Sunset" key="colors/weather"></color-selector>
+                <alpha-input color="layer.colors.Sunset"></alpha-input>
             </div>
             <div>
                 <span class="color-label">Night</span>
-                <color-selector color="layer.colors.night" key="colors/weather"></color-selector>
-                <alpha-input color="layer.colors.night"></alpha-input>
+                <color-selector color="layer.colors.Night" key="colors/weather"></color-selector>
+                <alpha-input color="layer.colors.Night"></alpha-input>
             </div>
         </div>
         <div>
