--- a/partials/editWeatherModal.html
+++ b/partials/editWeatherModal.html
@@ -57,7 +57,7 @@
 
 <div class="modal-container" unfocus-modal>
     <div class="modal tabs-modal">
-        <div class="close-modal" ng-click="$emit('closeModal')"></div>
+        <div class="close-modal" ng-click="closeModal()"></div>
 
         <div class="tabs-container">
             <div ng-repeat="tab in tabs" class="tab" ng-class="{'selected': tab.selected}" ng-click="onTabClick($event, tab)">
