--- a/partials/editWeatherModal.html
+++ b/partials/editWeatherModal.html
@@ -53,6 +53,20 @@
         padding: 8px 16px;
         display: block;
     }
+
+    .edit-weather-modal td:first-of-type {
+        text-align: right;
+        padding-right: 12px;
+    }
+
+    .edit-weather-modal th {
+        text-align: center;
+    }
+
+    .edit-weather-modal td color-swatch {
+        width: 96px;
+        height: 48px;
+    }
 </style>
 
 <div class="modal-container" unfocus-modal>
