fixed size and spacing of table color swatches

--- a/partials/editWeatherModal.html
+++ b/partials/editWeatherModal.html
@@ -64,8 +64,9 @@
     }
 
     .edit-weather-modal td color-swatch {
-        width: 96px;
-        height: 48px;
+        width: 80px;
+        height: 40px;
+        margin: 1px 0;
     }
 </style>
 
