removed keys from color selectors

--- a/partials/editWeather/clouds.html
+++ b/partials/editWeather/clouds.html
@@ -33,22 +33,22 @@
         <div class="colors" ng-if="::layer.colors">
             <div>
                 <span class="color-label">Sunrise</span>
-                <color-selector color="layer.colors.Sunrise" key="weather/cloudColors"></color-selector>
+                <color-selector color="layer.colors.Sunrise"></color-selector>
                 <alpha-input color="layer.colors.Sunrise"></alpha-input>
             </div>
             <div>
                 <span class="color-label">Day</span>
-                <color-selector color="layer.colors.Day" key="weather/cloudColors"></color-selector>
+                <color-selector color="layer.colors.Day"></color-selector>
                 <alpha-input color="layer.colors.Day"></alpha-input>
             </div>
             <div>
                 <span class="color-label">Sunset</span>
-                <color-selector color="layer.colors.Sunset" key="weather/cloudColors"></color-selector>
+                <color-selector color="layer.colors.Sunset"></color-selector>
                 <alpha-input color="layer.colors.Sunset"></alpha-input>
             </div>
             <div>
                 <span class="color-label">Night</span>
-                <color-selector color="layer.colors.Night" key="weather/cloudColors"></color-selector>
+                <color-selector color="layer.colors.Night"></color-selector>
                 <alpha-input color="layer.colors.Night"></alpha-input>
             </div>
         </div>
