--- a/partials/editWeather/dalc.html
+++ b/partials/editWeather/dalc.html
@@ -16,16 +16,16 @@
     <tr ng-repeat="item in dalc">
         <td>{{::item.path}}</td>
         <td>
-            <color-selector color="item.Sunrise" key="weather/dalc"></color-selector>
+            <color-selector color="item.Sunrise"></color-selector>
         </td>
         <td>
-            <color-selector color="item.Day" key="weather/dalc"></color-selector>
+            <color-selector color="item.Day"></color-selector>
         </td>
         <td>
-            <color-selector color="item.Sunset" key="weather/dalc"></color-selector>
+            <color-selector color="item.Sunset"></color-selector>
         </td>
         <td>
-            <color-selector color="item.Night" key="weather/dalc"></color-selector>
+            <color-selector color="item.Night"></color-selector>
         </td>
     </tr>
     </tbody>
