--- a/partials/editWeather/colors.html
+++ b/partials/editWeather/colors.html
@@ -16,16 +16,16 @@
     <tr ng-repeat="group in colorGroups">
         <td>{{::group.label}}</td>
         <td>
-            <color-selector color="group.Sunrise" key="weather/colors"></color-selector>
+            <color-selector color="group.Sunrise"></color-selector>
         </td>
         <td>
-            <color-selector color="group.Day" key="weather/colors"></color-selector>
+            <color-selector color="group.Day"></color-selector>
         </td>
         <td>
-            <color-selector color="group.Sunset" key="weather/colors"></color-selector>
+            <color-selector color="group.Sunset"></color-selector>
         </td>
         <td>
-            <color-selector color="group.Night" key="weather/colors"></color-selector>
+            <color-selector color="group.Night"></color-selector>
         </td>
     </tr>
     </tbody>
