--- a/partials/editWeatherModal.html
+++ b/partials/editWeatherModal.html
@@ -27,7 +27,9 @@
 
     .cloud-layer {
         display: flex;
-        margin: 6px 0;
+        margin: 8px 0;
+        padding: 2px 0 6px 14px;
+        position: relative;
     }
 
     .cloud-layer .colors {
@@ -40,7 +42,9 @@
     }
 
     .cloud-layer .remove-item {
-        margin-top: 3px;
+        position: absolute;
+        top: 4px;
+        right: 7px;
     }
 
     alpha-input input {
